--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -9,6 +8,7 @@
     <body>
         <h1>David Butterworth</h1>
         <h2>Game Developer</h2>
+        <h3><a href="./public/curriculum vitae.html">Curriculum Vitae</a></h3>
         <hr/>
 
         <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
@@ -19,7 +19,7 @@
 
         <hr/>
         <a href="./public/about.html">About Me</a>
-        <a href="./public/contact.html">Contact Me</a>
+        <a href="mailto:david.butterworth1337@gmail.com">Contact Me</a>
     </body>
 </html>
 
