--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <title>David's Portfolio</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
-        <h1>David Butterworth</h1>
-        <h2>Game Developer</h2>
-        <h3><a href="./public/curriculum vitae.html">Curriculum Vitae</a></h3>
-        <hr/>
+        <div class="topNavBar">
+            <h3><a href="./public/curriculum vitae.html">Curriculum Vitae</a></h3>
+            <h3><a href="./public/curriculum vitae.html">Link 2</a></h3>
+            <h3><a href="./public/curriculum vitae.html">Link 3</a></h3>
+        </div>
 
-        <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-        <img src="./assets/images/movie-ranking.png" alt="Movie rankings" width="400"/>
+        <div class="photoNameBlock">
+            <h1>David Butterworth</h1>
+            <h2>Designer & Developer</h2>
+            <img src="./assets/images/david2.JPG" alt="">
+        </div>
+
+        <div class="projects">
+            <h2>Projects</h2>
+
+        </div>
+
         
-        <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-        <img src="./assets/images/birthday-invite.png" alt="Birthday invite" height="400" />
-
-        <hr/>
-        <a href="./public/about.html">About Me</a>
-        <a href="mailto:david.butterworth1337@gmail.com">Contact Me</a>
-    </body>
 </html>
 
