--- a/index.html
+++ b/index.html
@@ -1,29 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>David's Portfolio</title>
-        <link rel="stylesheet" href="./style.css">
-    </head>
 
-    <body>
-        <div class="topNavBar">
-            <h3><a href="./public/curriculum vitae.html">Curriculum Vitae</a></h3>
-            <h3><a href="./public/curriculum vitae.html">Link 2</a></h3>
-            <h3><a href="./public/curriculum vitae.html">Link 3</a></h3>
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>David Butterworth Portfolio</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+</head>
 
-        <div class="photoNameBlock">
-            <h1>David Butterworth</h1>
-            <h2>Designer & Developer</h2>
-            <img src="./assets/images/david2.JPG" alt="">
-        </div>
+<body>
+  <div class="main">
+    <!-- <img class="logo" src="" alt="logo"> -->
+    <h2>David Butterworth</h2>
+    <h1>Hello, <br /> I am a <br /><span class="auto-type"></span></h1>
+    <div class="left card"><img class="tile-image" src="./assets/images/placeholder1.webp" alt="Project Image 1">
+      <h2 class="card-title">Project 1</h2>
+      <p class="card-text">We strive to create the most beautiful websites for all your needs. Working closely with you
+        to
+        design and
+        develop an amazing website for your business.</p>
+    </div>
 
-        <div class="projects">
-            <h2>Projects</h2>
+    <div class="right card"><img class="tile-image" src="./assets/images/placeholder2.jpeg" alt="Project Image 2">
+      <h2 class="card-title">Project 2</h2>
+      <p>Built by our team of professional developers, we ensure the most rigourous and modern websites. Built from
+        scratch using HTML and CSS. Only the best for you.</p>
+    </div>
 
-        </div>
+  </div>
+  <footer>
+    <p>Create. Develop. Design.</p>
+  </footer>
 
-        
+  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+  <script> 
+    var typed = new Typed(".auto-type", {
+        strings: ["Developer", "Designer", "Creative"],
+        typeSpeed: 100,
+        backSpeed: 100,
+        loop: true
+    })
+  </script>
+</body>
+
 </html>
-
