--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   </div>
   <footer>
-    <p>Create. Develop. Design.</p>
+    <p>Design. Develop. Create.</p>
   </footer>
 
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
