Added nav links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
 <body>
   <div class="main">
     <!-- <img class="logo" src="" alt="logo"> -->
-    <h2>David Butterworth</h2>
+    <div class="top-nav">
+      <h2>David Butterworth 
+        <span>
+          <a href="">Contact</a>
+          <a href="">Projects</a>
+          <a href="">About</a>
+        </span>
+      </h2>
+      
+    </div>
     <h1>Hello, <br /> I am a <br /><span class="auto-type"></span></h1>
     <div class="left card"><img class="tile-image" src="./assets/images/placeholder1.webp" alt="Project Image 1">
       <h2 class="card-title">Project 1</h2>
