--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-  <div class="main">
+
+  <div class="welcome">
     <!-- <img class="logo" src="" alt="logo"> -->
     <div class="top-nav">
       <h2>David Butterworth 
@@ -38,8 +39,10 @@
       <p>Built by our team of professional developers, we ensure the most rigourous and modern websites. Built from
         scratch using HTML and CSS. Only the best for you.</p>
     </div>
+  </div>
 
   </div>
+
   <footer>
     <p>Design. Develop. Create.</p>
   </footer>
