--- a/index.html
+++ b/index.html
@@ -1,159 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Poppins:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <title>Portfolio</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>David Butterworth Portfolio</title>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-</head>
-
-<body>
-
-  <div class="welcome">
-    <!-- <img class="logo" src="" alt="logo"> -->
-    <div class="top-nav">
-      <h2>David Butterworth 
-        <span>
-          <a href="">Contact</a>
-          <a href="">Projects</a>
-          <a href="#about-section">About</a>
-        </span>
-      </h2>
-    </div>
-
-    <h1>Hello, <br /> I am a <br /><span class="auto-type"></span></h1>
-    <div class="left card"><img class="tile-image" src="./assets/images/placeholder1.webp" alt="Project Image 1">
-      <h2 class="card-title">Project 1</h2>
-      <p class="card-text">We strive to create the most beautiful websites for all your needs. Working closely with you
-        to
-        design and
-        develop an amazing website for your business.</p>
-    </div>
-
-    <div class="right card"><img class="tile-image" src="./assets/images/placeholder2.jpeg" alt="Project Image 2">
-      <h2 class="card-title">Project 2</h2>
-      <p>Built by our team of professional developers, we ensure the most rigourous and modern websites. Built from
-        scratch using HTML and CSS. Only the best for you.</p>
-    </div>
-
-    </div>
-
-    <!-- Start of the "About Me" section -->
-    <div id="about-section">
-        <h2 id="about-heading">About Me</h2>
-        <p id="about-para"> I am currently a full-time Senior Technical Analyst for one of the UK’s largest software companies situated in Newcastle upon Tyne after graduating from Northumbria University with First Class Honours in Computer Science with Games Development. My current role specialises in building and maintaining pseudo-machine learning projects for back-end data automation in a Software as a Service product.</p>
-
-        <!-- Container to keep all 3 drop downs in -->
-        <div id="about-dropdown-container">
-            <!-- Education drop down -->
-            <button type="button" class="collapsible" id="education-button">Education</button>
-            <div class="content">
-                <p>
-                    First Class Honours
-                    <br>
-                    BsC Computer Science with Games Development
-                    <br>
-                    Northumbria University (2020)
-                </p>
-                <p>
-                    D* D* D*
-                    <br>
-                    Games IT
-                    <br>
-                    Carlisle College (2017)
-                </p>
+  <body>
+    <header>
+      <div class="container">
+        <nav class="flex items-centre justify-between">
+          <div class="left flex justfiy-right">
+            <div>
+              <a href="#">Home</a> <a href="#about">About</a>
+              <a href="#services">Services</a>
             </div>
-            
-            <!-- Selected exp dropdown -->
-            <button type="button" class="collapsible" id="selected-exp-button">Selected Experience</button>
-            <div class="content">
-                <h3>
-                    Senior Technical Analyst <br>
-                    Advanced || Newcastle upon Tyne || 2021 - Present 
-                </h3>
-                <ul>
-                    <li>Project management</li>
-                    <li>Project design/development</li>
-                    <li>Delivering time-sensitive code for high profile clients</li>
-                    <li>Developing bespoke solutions to stakeholder;s requirements</li>
-                    <li>Managing outsourced programming teams</li>
-                    <li>Training and mentoring junior staff</li>
-                    <li>Personal development planning</li>
-                    <li>Production of documentation</li>
-                    <li>Continuation of core Technical Analyst responsibilities found below</li>
-                </ul>
+          </div>
+          <div class="right">
+            <button class="btn btn-primary">Contact</button>
+          </div>
+        </nav>
+      </div>
+      <div class="hero flex items-centre justify-between">
+        <div class="left flex-1 justify-center">
+          <img
+            src="./assets/david2.JPG"
+          />
+        </div>
+        <div class="right flex-1">
+          <h6>David Butterworth</h6>
+          <h1>
+            I'm a<br />
+            <span class="auto-type"></span>
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            illum nam nobis, minima laudantium fugit sequi nostrum quod impedit,
+            beatae necessitatibus praesentium optio labore nemo!
+          </p>
+          <div>
+            <button class="btn btn-secondary">
+              <!-- TO DO: add CV file to download path -->
+              <a class="btn-secondary" href="path_to_file" download="proposed_file_name">DOWNLOAD CV</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
 
-                <h3>
-                    Technical Analyst <br>
-                    CloudTrade || Newcastle upon Tyne || 2020 - 2021 
-                </h3>
-                <ul>
-                    <li>Diagnosing and resolving problem code</li>
-                    <li>Idependent production of bespoke code for both new projects and maintenence of production environments</li>
-                    <li>Adhering to strict project timelines and individual SLAs across the client base</li>
-                    <li>Working as part of a team to achieve company goals</li>
-                    <li>Handling client enquires and complaints</li>
-                    <li>Adhering to company coding standards and version control practises</li>
-                    <li>Performing methodical and comprehensive testing</li>
-                    <li>Creation and analysis of reports</li>
-                    <li>Vigilant alert monitoring</li>
-                </ul>
-            </div>
+    <section class="about" id="about">
+      <div class="container flex items-centre">
+        <div class="left flex-1 justify-right">
+          <img
+            src="./assets/david3.jpg"
+            height="400px"
+            alt="profile pic"
+          />
+        </div>
+        <div class="right flex-1">
+          <h1>About <span>Me</span></h1>
+          <h3>Hello! I'm David.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+            adipisci distinctio obcaecati aliquid, quia tempora quis optio
+            repudiandae officia earum? Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit.
+          </p>
+          <div class="socials">
+            <a href="https://www.linkedin.com/in/david-butterworth-5b9950203/"
+              ><img
+                src="./assets/LinkedIN_black.png"
+                width="40px"
+                alt="LinkedIn Link"
+            /></a>
+            <a href="https://github.com/Tryxis"
+              ><img
+                src="./assets/github_black.png"
+                width="40px"
+                alt="GitHub link"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="services" id="services">
+      <div class="container">
+        <h1 class="services-head">Services</h1>
+        <p>All your digital needs... covered.</p>
+        <div class="card-grid">
+          <div class="card">
+            <img src="https://source.unsplash.com/1600x900/?nature,water" />
+            <h2>Game</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
+              debitis?
+            </p>
+          </div>
+          <div class="card">
+            <img src="https://source.unsplash.com/1600x900/?boy,men" />
+            <h2>Web</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
+              debitis?
+            </p>
+          </div>
+          <div class="card">
+            <img src="https://source.unsplash.com/1600x900/?car,bike" />
+            <h2>App</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
+              debitis?
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-            <!-- Relevant skills dropdown -->
-            <button type="button" class="collapsible" id="relevant-skills-button">Relevant Skills</button>
-            <div class="content">
-                <ul>
-                    <li>Object Oriented Programming (C#, C++, Java)</li>
-                    <li>Web Development (HTML5, CSS, Node.js, Knockout.js, PHP)</li>
-                    <li>Databases (SQL, SSRS)</li>
-                    <li>Prolog</li>
-                    <li>Unreal Engine</li>
-                    <li>Unity</li>
-                    <li>MS office</li>
-                </ul>
-            </div>
-        </div> <!-- End of about-dropdown-container -->
-    </div>  <!-- End of about-section -->
-
-  <footer>
-    <p>Design. Develop. Create.</p>
-  </footer>
-
-  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-  <script> 
-    var typed = new Typed(".auto-type", {
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script>
+      var typed = new Typed(".auto-type", {
         strings: ["Developer", "Designer", "Creative"],
         typeSpeed: 100,
         backSpeed: 100,
-        loop: true
-    })
-  </script>
-
-  <script>
-    var coll = document.getElementsByClassName("collapsible");
-    var i;
-
-    for (i = 0; i < coll.length; i++) 
-    {
-        coll[i].addEventListener("click", function() {
-        this.classList.toggle("active");
-        var content = this.nextElementSibling;
-        if (content.style.display === "block") 
-        {
-        content.style.display = "none";
-        } 
-        else 
-        {
-        content.style.display = "block";
-        }
-    });
-    }
-  </script>
-</body>
-
+        loop: true,
+      });
+    </script>
+  </body>
 </html>
