--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+    <title>David Butterworth's Portfolio</title>
   </head>
 
   <body>
@@ -25,7 +25,8 @@
         <nav class="flex items-centre justify-between">
           <div class="left flex justfiy-right">
             <div>
-              <a href="#">Home</a> <a href="#about">About</a>
+              <a href="#">Home</a> 
+              <a href="#about">About</a>
               <a href="#services">Services</a>
             </div>
           </div>
