Project page WIP

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div>
               <a href="#">Home</a> 
               <a href="#about">About</a>
-              <a href="#services">Services</a>
+              <a href="#services">Projects</a>
             </div>
           </div>
           <div class="right">
@@ -99,31 +99,28 @@
     </section>
     <section class="services" id="services">
       <div class="container">
-        <h1 class="services-head">Services</h1>
-        <p>All your digital needs... covered.</p>
+        <h1 class="services-head">Projects</h1>
+        <p>To see more of my work, click <a href="./projects.html" > here </a> </p>
         <div class="card-grid">
           <div class="card">
             <img src="https://source.unsplash.com/1600x900/?nature,water" />
-            <h2>Game</h2>
+            <h2>Delivery Davey</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
-              debitis?
+              Deliver packages to a neighbourhood as quickly as you can - but be careful to maintain your speed!
             </p>
           </div>
           <div class="card">
             <img src="https://source.unsplash.com/1600x900/?boy,men" />
-            <h2>Web</h2>
+            <h2>Downhill Davey</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
-              debitis?
+              Flip and trick your way down Mount Muckle without bonking your head!
             </p>
           </div>
           <div class="card">
             <img src="https://source.unsplash.com/1600x900/?car,bike" />
-            <h2>App</h2>
+            <h2>The Question</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
-              debitis?
+              Test your comicbook knowledge in this interface-based puzzler!
             </p>
           </div>
         </div>
