--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div>
             <button class="btn btn-secondary">
               <!-- TO DO: add CV file to download path -->
-              <a class="btn-secondary" href="path_to_file" download="proposed_file_name">DOWNLOAD CV</a>
+              <a class="btn-secondary" href="./assets/files/David Butterworth CV.docx" download="david_butterworth_cv">DOWNLOAD CV</a>
             </button>
           </div>
         </div>
