--- a/projects.html
+++ b/projects.html
@@ -20,44 +20,34 @@
 </head>
 
 <header>
-    <div class="container">
-      <nav class="flex items-centre justify-between">
-        <div class="left flex justfiy-right">
-          <div>
-            <a href="./index.html">Home</a> 
-          </div>
-        </div>
-        <div class="right">
-            <button class="btn btn-primary">Contact</button>
-          </div>
-        </nav>
+  <div class="navbar">
+    <a href="./index.html">Home</a>
+    <div class="right">
+      <div class="right">
+        <button class="btn btn-primary">Contact</button>
+      </div>
     </div>
+  </div>
   </header>
 
 <body>  
-  <div class="main">
-    <h1><span class="creative">Projects</span></h1>
-    <div class="left card">
-    <img class="tile-image" src="./assets/images/placeholder1.webp" alt="hand and flower in water">
-      <h2 class="card-title">Delivery Davey</h2> 
-      <p class="card-text">Deliver packages around the neighbourhood - but be careful to maintain your speed!</p>
-      <!-- <div class="card-links">
-          <a href="https://github.com/Tryxis"><img src="./assets/Github_white.png" width="35px" alt="GitHub link"/></a>
-          <a href="https://github.com/Tryxis"><img src="./assets/Github_white.png" width="35px" alt="GitHub link"/></a>
-      </div>  -->
+
+  <div class="projects-title">Projects</div>
+  <div class="projects-subtitle">Check out my latest projects below</div>
+
+  <div class="grid">
+    <div class="grid-item">
+        <div class="title">Title 1</div>
+        <img src="./assets/images/placeholder1.webp" alt="Image 1">
+        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
     </div>
-
-    <div class="right card"><img class="tile-image" src="./assets/images/placeholder2.jpeg" alt="metal structure">
-      <h2 class="card-title">Downhill Davey</h2>
-      <p>Flip and trick your way down Mount Muckle, but take care not to bump your head!</p>
+    <div class="grid-item">
+        <div class="title">Title 2</div>
+        <img src="./assets/images/placeholder2.jpeg" alt="Image 2">
+        <div class="text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
     </div>
-
-    <div class="left card"><img class="tile-image" src="./assets/images/placeholder1.webp" alt="hand and flower in water">
-        <h2 class="card-title">The Question</h2>
-        <p class="card-text">Test your superhero knowledge in this interface-based quiz.</p>
-      </div>
-
-  </div>
-</body>
+    <!-- Add more grid-items as needed -->
+</div>
+</body> 
 
 </html>
