--- a/projects.html
+++ b/projects.html
@@ -37,15 +37,20 @@
 
   <div class="grid">
     <div class="grid-item">
-        <div class="title">Title 1</div>
+        <div class="title">Delivery Davey</div>
         <img src="./assets/images/placeholder1.webp" alt="Image 1">
         <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
     </div>
     <div class="grid-item">
-        <div class="title">Title 2</div>
+        <div class="title">Delivery Davey</div>
         <img src="./assets/images/placeholder2.jpeg" alt="Image 2">
         <div class="text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
     </div>
+    <div class="grid-item">
+      <div class="title">The Question</div>
+      <img src="./assets/images/placeholder2.jpeg" alt="Image 2">
+      <div class="text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+  </div>
     <!-- Add more grid-items as needed -->
 </div>
 </body> 
