Updated styling and button functionality

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
           </div>
           <div class="right">
-            <button class="btn btn-primary">Contact</button>
+            <a href="mailto:david.butterworth1337@gmail.com" class="btn btn-primary contact">Contact</a>
           </div>
         </nav>
       </div>
@@ -54,7 +54,6 @@
           </p>
           <div>
             <button class="btn btn-secondary">
-              <!-- TO DO: add CV file to download path -->
               <a class="btn-secondary" href="./assets/files/David Butterworth CV.docx" download="david_butterworth_cv">DOWNLOAD CV</a>
             </button>
           </div>
