--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
     <a href="./index.html">Home</a>
     <div class="right">
       <div class="right">
-        <button class="btn btn-primary">Contact</button>
+        <a href="mailto:david.butterworth1337@gmail.com" class="btn btn-primary contact">Contact</a>
       </div>
     </div>
   </div>
