--- a/index.html
+++ b/index.html
@@ -100,28 +100,38 @@
       <div class="container">
         <h1 class="services-head">Projects</h1>
         <p>To see more of my work, click <a href="./projects.html" > here </a> </p>
+
         <div class="card-grid">
           <div class="card">
-            <img src="https://source.unsplash.com/1600x900/?nature,water" />
+            <a href="https://github.com/Tryxis/delivery-davey">
+            <img src="./assets/images/console-controller.png" />
             <h2>Delivery Davey</h2>
             <p>
               Deliver packages to a neighbourhood as quickly as you can - but be careful to maintain your speed!
             </p>
+          </a>
           </div>
+
           <div class="card">
-            <img src="https://source.unsplash.com/1600x900/?boy,men" />
+            <a href="https://github.com/Tryxis/downhill-davey">
+            <img src="./assets/images/console-controller.png" />
             <h2>Downhill Davey</h2>
             <p>
               Flip and trick your way down Mount Muckle without bonking your head!
             </p>
+          </a>
           </div>
+
           <div class="card">
-            <img src="https://source.unsplash.com/1600x900/?car,bike" />
+            <a href="https://github.com/Tryxis/the-question">
+            <img src="./assets/images/console-controller.png" />
             <h2>The Question</h2>
             <p>
               Test your comicbook knowledge in this interface-based puzzler!
             </p>
+          </a>
           </div>
+
         </div>
       </div>
     </section>
