--- a/index.html
+++ b/index.html
@@ -24,22 +24,29 @@
       <div class="container">
         <nav class="flex items-centre justify-between">
           <div class="left flex justfiy-right">
-            <div>
-              <a href="#">Home</a> 
+            <div class="hamburger-menu">
+              <div class="line"></div>
+              <div class="line"></div>
+              <div class="line"></div>
+            </div>
+            <div class="links">
+              <a href="#">Home</a>
               <a href="#about">About</a>
               <a href="#services">Projects</a>
             </div>
           </div>
           <div class="right">
-            <a href="mailto:david.butterworth1337@gmail.com" class="btn btn-primary contact">Contact</a>
+            <a
+              href="mailto:david.butterworth1337@gmail.com"
+              class="btn btn-primary contact"
+              >Contact</a
+            >
           </div>
         </nav>
       </div>
       <div class="hero flex items-centre justify-between">
         <div class="left flex-1 justify-center">
-          <img
-            src="./assets/david2.JPG"
-          />
+          <img src="./assets/david2.JPG" />
         </div>
         <div class="right flex-1">
           <h6>David Butterworth</h6>
@@ -54,7 +61,12 @@
           </p>
           <div>
             <button class="btn btn-secondary">
-              <a class="btn-secondary" href="./assets/files/David Butterworth CV.docx" download="david_butterworth_cv">DOWNLOAD CV</a>
+              <a
+                class="btn-secondary"
+                href="./assets/files/David Butterworth CV.docx"
+                download="david_butterworth_cv"
+                >DOWNLOAD CV</a
+              >
             </button>
           </div>
         </div>
@@ -64,11 +76,7 @@
     <section class="about" id="about">
       <div class="container flex items-centre">
         <div class="left flex-1 justify-right">
-          <img
-            src="./assets/david3.jpg"
-            height="400px"
-            alt="profile pic"
-          />
+          <img src="./assets/david3.jpg" height="400px" alt="profile pic" />
         </div>
         <div class="right flex-1">
           <h1>About <span>Me</span></h1>
@@ -99,39 +107,42 @@
     <section class="services" id="services">
       <div class="container">
         <h1 class="services-head">Projects</h1>
-        <p>To see more of my work, click <a href="./projects.html" > here </a> </p>
+        <p>
+          To see more of my work, click <a href="./projects.html"> here </a>
+        </p>
 
         <div class="card-grid">
           <div class="card">
             <a href="https://github.com/Tryxis/delivery-davey">
-            <img src="./assets/images/console-controller.png" />
-            <h2>Delivery Davey</h2>
-            <p>
-              Deliver packages to a neighbourhood as quickly as you can - but be careful to maintain your speed!
-            </p>
-          </a>
+              <img src="./assets/images/console-controller.png" />
+              <h2>Delivery Davey</h2>
+              <p>
+                Deliver packages to a neighbourhood as quickly as you can - but
+                be careful to maintain your speed!
+              </p>
+            </a>
           </div>
 
           <div class="card">
             <a href="https://github.com/Tryxis/downhill-davey">
-            <img src="./assets/images/console-controller.png" />
-            <h2>Downhill Davey</h2>
-            <p>
-              Flip and trick your way down Mount Muckle without bonking your head!
-            </p>
-          </a>
+              <img src="./assets/images/console-controller.png" />
+              <h2>Downhill Davey</h2>
+              <p>
+                Flip and trick your way down Mount Muckle without bonking your
+                head!
+              </p>
+            </a>
           </div>
 
           <div class="card">
             <a href="https://github.com/Tryxis/the-question">
-            <img src="./assets/images/console-controller.png" />
-            <h2>The Question</h2>
-            <p>
-              Test your comicbook knowledge in this interface-based puzzler!
-            </p>
-          </a>
+              <img src="./assets/images/console-controller.png" />
+              <h2>The Question</h2>
+              <p>
+                Test your comicbook knowledge in this interface-based puzzler!
+              </p>
+            </a>
           </div>
-
         </div>
       </div>
     </section>
@@ -143,6 +154,16 @@
         typeSpeed: 100,
         backSpeed: 100,
         loop: true,
+      });
+    </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const hamburgerMenu = document.querySelector(".hamburger-menu");
+        const links = document.querySelector(".links");
+
+        hamburgerMenu.addEventListener("click", function () {
+          links.classList.toggle("active");
+        });
       });
     </script>
   </body>
