Updated info and media query

--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
             <span class="auto-type"></span>
           </h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-            illum nam nobis, minima laudantium fugit sequi nostrum quod impedit,
-            beatae necessitatibus praesentium optio labore nemo!
+            I am currently a full-time Senior Technical Analyst for one of the UK’s largest software companies situated in Newcastle upon Tyne after graduating from Northumbria University with First Class Honours in Computer Science with Games Development. My current role specialises in building and maintaining pseudo-machine learning projects for back-end data automation in a Software as a Service product.
           </p>
           <div>
             <button class="btn btn-secondary">
