Text bodies updated

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
           <h1>About <span>Me</span></h1>
           <h3>Hello! I'm David.</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-            adipisci distinctio obcaecati aliquid, quia tempora quis optio
-            repudiandae officia earum? Lorem ipsum dolor sit amet consectetur,
-            adipisicing elit.
+            Beyond my professional endeavors, I'm also deeply passionate about both video games and comic books. 
+            Whether it's a deep dive into mechanic design, absorbing the methods of visual story telling, or simply 
+            enjoying an afternoon with a good book or game, I find inspiration and balance in pursuing my passions outside of work.
+
           </p>
           <div class="socials">
             <a href="https://www.linkedin.com/in/david-butterworth-5b9950203/"
