--- a/projects.html
+++ b/projects.html
@@ -39,17 +39,17 @@
     <div class="grid-item">
         <div class="title">Delivery Davey</div>
         <img src="./assets/images/placeholder1.webp" alt="Image 1">
-        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+        <div class="text">A small delivery game prototype built in Unity</div>
     </div>
     <div class="grid-item">
         <div class="title">Delivery Davey</div>
         <img src="./assets/images/placeholder2.jpeg" alt="Image 2">
-        <div class="text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+        <div class="text">A downhill snowboarding game built in Unity</div>
     </div>
     <div class="grid-item">
       <div class="title">The Question</div>
       <img src="./assets/images/placeholder2.jpeg" alt="Image 2">
-      <div class="text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+      <div class="text">An interface-based quiz game focused on popular culture, built in Unity</div>
   </div>
     <!-- Add more grid-items as needed -->
 </div>
