--- a/index.html
+++ b/index.html
@@ -1,149 +1,156 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Poppins:wght@200&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
-      rel="stylesheet"
-    />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+
     <title>David Butterworth's Portfolio</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/album/">
+
+    <!-- Bootstrap core CSS -->
+    <link href="boot_style.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="style.css" rel="stylesheet">
   </head>
 
   <body>
+
     <header>
-      <div class="container">
-        <nav class="flex items-centre justify-between">
-          <div class="left flex justfiy-right">
-            <div class="hamburger-menu">
-              <div class="line"></div>
-              <div class="line"></div>
-              <div class="line"></div>
+      <div class="collapse bg-dark" id="navbarHeader">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-8 col-md-7 py-4">
+              <h4 class="headings">About</h4>
+              <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+              <button class="btn btn-secondary">
+                <a class="btn-secondary" href="./assets/David Butterworth CV.docx.pdf" download="david_butterworth_cv">DOWNLOAD CV</a>
+              </button>
             </div>
-            <div class="links">
-              <a href="#">Home</a>
-              <a href="#about">About</a>
-              <a href="#services">Projects</a>
+            <div class="col-sm-4 offset-md-1 py-4">
+              <h4 class="headings">Contact</h4>
+              <ul class="list-unstyled">
+                <li><a href="https://github.com/Tryxis" class="text-white">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/david-butterworth-5b9950203/" class="text-white">LinkedIn</a></li>
+                <li><a href="mailto: david.butterworth1337@gmail.com" class="text-white">Email me</a></li>
+              </ul>
             </div>
           </div>
-          <div class="right">
-            <a
-              href="mailto:david.butterworth1337@gmail.com"
-              class="btn btn-primary contact"
-              >Contact</a
-            >
-          </div>
-        </nav>
-      </div>
-      <div class="hero flex items-centre justify-between">
-        <div class="left flex-1 justify-center">
-          <img src="./assets/david2.JPG" />
         </div>
-        <div class="right flex-1">
-          <h6>David Butterworth</h6>
-          <h1>
-            I'm a<br />
-            <span class="auto-type"></span>
-          </h1>
-          <p>
-            I am currently a full-time Senior Technical Analyst for one of the UK’s largest software companies situated in Newcastle upon Tyne after graduating from Northumbria University with First Class Honours in Computer Science with Games Development. My current role specialises in building and maintaining pseudo-machine learning projects for back-end data automation in a Software as a Service product.
-          </p>
-          <div>
-            <button class="btn btn-secondary">
-              <a
-                class="btn-secondary"
-                href="./assets/files/David Butterworth CV.docx"
-                download="david_butterworth_cv"
-                >DOWNLOAD CV</a
-              >
-            </button>
-          </div>
+      </div>
+      <div class="navbar navbar-dark bg-dark box-shadow">
+        <div class="container d-flex justify-content-between">
+          <a href="#" class="navbar-brand d-flex align-items-center">
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg> -->
+            <strong class="text-white">David Butterworth</strong>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
         </div>
       </div>
     </header>
 
-    <section class="about" id="about">
-      <div class="container flex items-centre">
-        <div class="left flex-1 justify-right">
-          <img src="./assets/david3.jpg" height="400px" alt="profile pic" />
-        </div>
-        <div class="right flex-1">
-          <h1>About <span>Me</span></h1>
-          <h3>Hello! I'm David.</h3>
-          <p>
-            Beyond my professional endeavors, I'm also deeply passionate about both video games and comic books. 
-            Whether it's a deep dive into mechanic design, absorbing the methods of visual story telling, or simply 
-            enjoying an afternoon with a good book or game, I find inspiration and balance in pursuing my passions outside of work.
+    <main role="main">
 
-          </p>
-          <div class="socials">
-            <a href="https://www.linkedin.com/in/david-butterworth-5b9950203/"
-              ><img
-                src="./assets/LinkedIN_black.png"
-                width="40px"
-                alt="LinkedIn Link"
-            /></a>
-            <a href="https://github.com/Tryxis"
-              ><img
-                src="./assets/github_black.png"
-                width="40px"
-                alt="GitHub link"
-            /></a>
+      <section class="jumbotron text-center">
+        <div class="container">
+          <h1 class="jumbotron-heading">I'm a<br />
+            <span class="auto-type"></span></h1>
+          <p class="lead text-muted">I am currently a full-time Senior Technical Analyst for one of the UK’s largest software companies situated in Newcastle upon Tyne after graduating from Northumbria University with First Class Honours in Computer Science with Games Development.</p>
+          <!-- <p>
+            <a href="#" class="btn btn-primary my-2">Main call to action</a>
+            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+          </p> -->
+        </div>
+      </section>
+
+      <div class="album py-5 bg-light">
+        <div class="container">
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="./imgs/delivery.png" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text card-title">Delivery Davey</p>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a href="https://github.com/Tryxis/delivery-davey">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View Repo</button>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="./imgs/downhill.png" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text card-title">Downhill Davey</p>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a href="https://github.com/Tryxis/downhill-davey">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View Repo</button>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text card-title">The Question</p>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a href="https://github.com/Tryxis/the-question">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View Repo</button>
+                      </a>
+                    </div>
+                    <small class="text-muted">Work in progress</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            </div>
           </div>
         </div>
       </div>
-    </section>
-    <section class="services" id="services">
+
+    </main>
+
+    <footer class="text-muted">
       <div class="container">
-        <h1 class="services-head">Projects</h1>
-        <p>
-          To see more of my work, click <a href="./projects.html"> here </a>
+        <p class="float-right">
+          <a href="#">Back to top</a>
         </p>
+        <p>David Butterworth Portfolio</p>
 
-        <div class="card-grid">
-          <div class="card">
-            <a href="https://github.com/Tryxis/delivery-davey">
-              <img src="./assets/images/console-controller.png" />
-              <h2>Delivery Davey</h2>
-              <p>
-                Deliver packages to a neighbourhood as quickly as you can - but
-                be careful to maintain your speed!
-              </p>
-            </a>
-          </div>
-
-          <div class="card">
-            <a href="https://github.com/Tryxis/downhill-davey">
-              <img src="./assets/images/console-controller.png" />
-              <h2>Downhill Davey</h2>
-              <p>
-                Flip and trick your way down Mount Muckle without bonking your
-                head!
-              </p>
-            </a>
-          </div>
-
-          <div class="card">
-            <a href="https://github.com/Tryxis/the-question">
-              <img src="./assets/images/console-controller.png" />
-              <h2>The Question</h2>
-              <p>
-                Test your comicbook knowledge in this interface-based puzzler!
-              </p>
-            </a>
-          </div>
-        </div>
       </div>
-    </section>
+    </footer>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="popper.js"></script>
+    <script src="bootstrap_min.js"></script>
+    <script src="holder.js"></script>
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
@@ -154,15 +161,6 @@
         loop: true,
       });
     </script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const hamburgerMenu = document.querySelector(".hamburger-menu");
-        const links = document.querySelector(".links");
 
-        hamburgerMenu.addEventListener("click", function () {
-          links.classList.toggle("active");
-        });
-      });
-    </script>
   </body>
 </html>
