--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="headings">About</h4>
-              <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+              <p class="text-muted">Designer and developer deeply passionate about both video games and software. IT professional with four years of industry experience.</p>
               <button class="btn btn-secondary">
                 <a class="btn-secondary" href="./assets/David Butterworth CV.docx.pdf" download="david_butterworth_cv">DOWNLOAD CV</a>
               </button>
