--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <img class="card-img-top" src="./imgs/delivery.png" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text card-title">Delivery Davey</p>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">A prototype driving and delivery game.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://github.com/Tryxis/delivery-davey">
@@ -96,7 +96,7 @@
                 <img class="card-img-top" src="./imgs/downhill.png" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text card-title">Downhill Davey</p>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">A prototype downhill snowboarding game.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://github.com/Tryxis/downhill-davey">
@@ -110,17 +110,17 @@
             
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                <img class="card-img-top" src="./imgs/the-question.png" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text card-title">The Question</p>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">A UI-based quiz game themed on DC comics.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://github.com/Tryxis/the-question">
                         <button type="button" class="btn btn-sm btn-outline-secondary">View Repo</button>
                       </a>
                     </div>
-                    <small class="text-muted">Work in progress</small>
+                    <small class="text-muted"></small>
                   </div>
                 </div>
               </div>
