--- a/index.html
+++ b/index.html
@@ -72,8 +72,6 @@
 					<li class="active" data-filter="*">All</li>
 					<li data-filter=".game">Game</li>
 					<li data-filter=".api">API</li>
-					<!-- <li data-filter=".typography">Typography</li> -->
-					<!-- <li data-filter=".photography">Photography</li> -->
 				</ul>
 			</div>
 
@@ -85,7 +83,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/controller1fin.jpg" alt="">
 							</div>
-							<a href="images/p1.jpg" class="img-pop-up">  
+							<a href="https://github.com/Tryxis/delivery-davey" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -102,7 +100,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/controller2fin.jpg" alt="">
 							</div>
-							<a href="images/p2.jpg" class="img-pop-up">  
+							<a href="https://github.com/Tryxis/downhill-davey" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -119,7 +117,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/controller3fin.jpg" alt="">
 							</div>
-							<a href="images/p3.jpg" class="img-pop-up">  
+							<a href="https://github.com/Tryxis/the-question" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -137,7 +135,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/api-fin.jpg" alt="">
 							</div>
-							<a href="images/p4.jpg" class="img-pop-up">  
+							<a href="https://github.com/Tryxis/Zoom-and-Broom" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
