--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/controller1fin.jpg" alt="">
 							</div>
-							<a href="delivery_davey.html" class="img-pop-up">  
+							<a href="./projects/delivery_davey.html" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
 							</a>                                  
 						</div>
 						<div class="p-inner">
-							<a href="delivery_davey.html"><h4>Delivery Davey</h4></a>
+							<a href="./projects/delivery_davey.html"><h4>Delivery Davey</h4></a>
 							<div class="cat">Game</div>
 						</div>                                         
 					</div>
