--- a/projects/delivery_davey.html
+++ b/projects/delivery_davey.html
@@ -55,7 +55,7 @@
 					<p class="mb-5">Game currently cannot be played in WebGL</p>
 
 					<p>
-						<a href="" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-me" onclick="playAlert()">Play Me</a>
+						<a href="" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-me" onclick="showAlert()">Play Me</a>
 						<a href="./assets/David Butterworth CV.docx.pdf" download="david_butterworth_cv" class="btn btn-secondary px-4 py-2 btn-sm">View Repo</a>
 					</p>
 				</div>
