--- a/projects/delivery_davey.html
+++ b/projects/delivery_davey.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>David Butterworth Portfolio</title>
+	<title>Delivery Davey</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="../css/animate.css">
