Created project pages

--- a/projects/downhill_davey.html
+++ b/projects/downhill_davey.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Delivery Davey</title>
+	<title>Downhill Davey</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="../css/animate.css">
@@ -44,19 +44,19 @@
 		<div class="container">
 			<div class="row mb-5 align-items-center">
 				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0 showcase-img">
-					<img src="../images/delivery-davey.png" alt="Image placeholder" class="img-fluid">
+					<img src="../images/downhill-davey.png" alt="Image placeholder" class="img-fluid">
 				</div>
 				<div class="col-lg-5 pl-lg-5">
 					<div class="section-heading showcase-heading">
-						<h2>Delivery <strong>Davey</strong></h2>
+						<h2>Downhill <strong>Davey</strong></h2>
 					</div>
-					<p class="lead">Small driving and delivery prototype</p>
-					<p class="mb-5">Zoom around a neighbourhood picking up and delivering packages as quickly as possible. Picking up packages generates speed, crashing loses it -  so drive carefully!</p>
+					<p class="lead">Small platform prototype</p>
+					<p class="mb-5">Flip and trick your way down Mount Muckle. Bonking your head will send you back to the top</p>
 					<p class="mb-5">Game currently cannot be played in WebGL</p>
 
 					<p>
 						<a href="" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-me" onclick="showAlert()">Play Me</a>
-						<a href="https://github.com/Tryxis/delivery-davey" class="btn btn-secondary px-4 py-2 btn-sm">View Repo</a>
+						<a href="https://github.com/Tryxis/downhill-davey" class="btn btn-secondary px-4 py-2 btn-sm">View Repo</a>
 					</p>
 				</div>
 			</div>
