--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
 			<div class="filters-content">
 				<div class="row grid">
+
 					<div class="single-portfolio col-sm-4 all game">
 						<div class="relative">
 							<div class="thumb">
@@ -94,30 +95,32 @@
 							<div class="cat">Game</div>
 						</div>                                         
 					</div>
+
 					<div class="single-portfolio col-sm-4 all game">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/controller2fin.jpg" alt="">
 							</div>
-							<a href="https://github.com/Tryxis/downhill-davey" class="img-pop-up">  
+							<a href="./projects/downhill_davey.html" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
 							</a>                                  
 						</div>
 						<div class="p-inner">
-							<a href="https://github.com/Tryxis/downhill-davey"><h4>Downhill Davey</h4></a>
+							<a href="./projects/downhill_davey.html"><h4>Downhill Davey</h4></a>
 							<div class="cat">Game</div>
 						</div>                                         
-					</div>                            
+					</div>         
+
 					<div class="single-portfolio col-sm-4 all game">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/controller3fin.jpg" alt="">
 							</div>
-							<a href="https://github.com/Tryxis/the-question" class="img-pop-up">  
+							<a href="./projects/the_question.html" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
@@ -125,28 +128,30 @@
 
 						</div>
 						<div class="p-inner">
-							<a href="https://github.com/Tryxis/the-question"><h4>The Question</h4></a>
+							<a href="./projects/the_question.html"><h4>The Question</h4></a>
 							<div class="cat">Game</div>
 						</div>
 					</div>
+
 					<div class="single-portfolio col-sm-4 all api">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/api-fin.jpg" alt="">
 							</div>
-							<a href="https://github.com/Tryxis/Zoom-and-Broom" class="img-pop-up">  
+							<a href="./projects/zoom_and_broom.html" class="img-pop-up">  
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
 							</a>                                
 						</div> 
 						<div class="p-inner">
-							<a href="https://github.com/Tryxis/Zoom-and-Broom"><h4>Zoom and Broom</h4></a>
+							<a href="./projects/zoom_and_broom.html"><h4>Zoom and Broom</h4></a>
 							<div class="cat">API</div>
 							<small>In progress</small>
 						</div>
 					</div>
+					
 				</div>
 			</div>
 		</div>
