--- a/projects/the_question.html
+++ b/projects/the_question.html
@@ -55,7 +55,7 @@
 					<p class="mb-5">Game currently cannot be played in WebGL</p>
 
 					<p>
-						<a href="" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-me" onclick="showAlert()">Play Me</a>
+						<a href="https://tryxis.itch.io/the-question" class="btn btn-primary px-4 py-2 btn-sm smoothscroll" id="play-m">Play Me</a>
 						<a href="https://github.com/Tryxis/the-question" class="btn btn-secondary px-4 py-2 btn-sm">View Repo</a>
 					</p>
 				</div>
