Fixed link issue

--- a/index.html
+++ b/index.html
@@ -82,13 +82,10 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/controller1fin.jpg" alt="">
-							</div>
-							<a href="./projects/delivery_davey.html" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                  
+								<a href="./projects/delivery_davey.html">
+									<img class="image img-fluid" src="images/controller1fin.jpg" alt="">
+								</a>
+							</div>                             
 						</div>
 						<div class="p-inner">
 							<a href="./projects/delivery_davey.html"><h4>Delivery Davey</h4></a>
@@ -100,13 +97,10 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/controller2fin.jpg" alt="">
-							</div>
-							<a href="./projects/downhill_davey.html" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                  
+								<a href="./projects/downhill_davey.html">
+									<img class="image img-fluid" src="images/controller2fin.jpg" alt="">
+								</a>
+							</div>                                
 						</div>
 						<div class="p-inner">
 							<a href="./projects/downhill_davey.html"><h4>Downhill Davey</h4></a>
@@ -118,14 +112,10 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/controller3fin.jpg" alt="">
+								<a href="./projects/the_question.html">
+									<img class="image img-fluid" src="images/controller3fin.jpg" alt="">
+								</a>
 							</div>
-							<a href="./projects/the_question.html" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a> 
-
 						</div>
 						<div class="p-inner">
 							<a href="./projects/the_question.html"><h4>The Question</h4></a>
@@ -137,13 +127,10 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/api-fin.jpg" alt="">
-							</div>
-							<a href="./projects/zoom_and_broom.html" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                
+									<a href="./projects/zoom_and_broom.html">
+										<img class="image img-fluid" src="images/api-fin.jpg" alt="">
+									</a>
+							</div>                              
 						</div> 
 						<div class="p-inner">
 							<a href="./projects/zoom_and_broom.html"><h4>Zoom and Broom</h4></a>
