Updated game and API icons

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 								<a href="./projects/delivery_davey.html">
-									<img class="image img-fluid" src="images/cont-400x400.png" alt="">
+									<img class="image img-fluid" src="images/console-controller-png.png" alt="Image of a console controller">
 								</a>
 							</div>                             
 						</div>
@@ -98,7 +98,7 @@
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 								<a href="./projects/downhill_davey.html">
-									<img class="image img-fluid" src="images/cont-400x400.png" alt="">
+									<img class="image img-fluid" src="images/console-controller-png.png" alt="Image of a console controller">
 								</a>
 							</div>                                
 						</div>
@@ -113,7 +113,7 @@
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 								<a href="./projects/the_question.html">
-									<img class="image img-fluid" src="images/cont-400x400.png" alt="">
+									<img class="image img-fluid" src="images/console-controller-png.png" alt="Image of a console controller">
 								</a>
 							</div>
 						</div>
@@ -128,7 +128,7 @@
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 									<a href="./projects/zoom_and_broom.html">
-										<img class="image img-fluid" src="images/API-400x400.png" alt="">
+										<img class="image img-fluid" src="images/pc_png.png" alt="Image of a PC">
 									</a>
 							</div>                              
 						</div> 
