--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 					<li class="active" data-filter="*">All</li>
 					<li data-filter=".game">Game</li>
 					<li data-filter=".api">API</li>
+					<li data-filter=".bot">Bot</li>
 				</ul>
 			</div>
 
@@ -130,7 +131,7 @@
 							</div>                              
 						</div> 
 						<div class="p-inner">
-							<a href="./projects/zoom_and_broom.html"><h4>Stock Flock</h4></a>
+							<a href="./projects/stock_flock.html"><h4>Stock Flock</h4></a>
 							<div class="cat">API</div>
 						</div>
 					</div>
@@ -150,6 +151,23 @@
 							<small>In progress</small>
 						</div>
 					</div>
+
+					<div class="single-portfolio col-sm-4 all bot">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+									<a href="./projects/dungeon_helper.html">
+										<img class="image img-fluid" src="images/robot-antennas.png" alt="Image of a PC">
+									</a>
+							</div>                              
+						</div> 
+						<div class="p-inner">
+							<a href="./projects/zoom_and_broom.html"><h4>Davey's Dungeon Helper</h4></a>
+							<div class="cat">Bot</div>
+							<!-- <small>In progress</small> -->
+						</div>
+					</div>
+
 					
 				</div>
 			</div>
